interface : ajustements responsive et alignements d’affichage

--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -1,5 +1,5 @@
 /*
-  A FAIRE (mise en forme accueil.css) :
+  PLAN de Mise en forme accueil.css :
 
   1) HERO
      - mettre une grande image de fond
@@ -466,8 +466,8 @@
 }
 
 /* Padding conteneur en mobile */
-@media (max-width: 900px) {
 
+@media (max-width: 900px) {
     .entete .conteneur,
     .pied_de_page .conteneur {
         padding-left: 16px;
@@ -476,6 +476,7 @@
 }
 
 /* Suggestions géocodage*/
+
 .panneau_suggestions{
   position: absolute;
   z-index: 50;
@@ -513,19 +514,17 @@
 }
 
 
-/* NAVIGATION DESKTOP et MOBILE REPLIÉ */
+/* RESPONSIVE */
 
 @media (max-width: 900px) {
     .bouton_menu {
         display: inline-flex;
     }
 
-    /* Le panneau mobile se positionne par rapport au header */
     .entete {
         position: relative;
     }
 
-    /* nav devient un panneau */
     .navigation {
         position: absolute;
         z-index: 10;
@@ -548,7 +547,7 @@
         pointer-events: none;
     }
 
-    /* état ouvert (piloté par JS) */
+    /* état ouvert (piloté par js) */
     .navigation[data-ouvert="true"] {
         opacity: 1;
         transform: translateY(0);
