--- a/templates/fragments/entete_utilisateur.html.twig
+++ b/templates/fragments/entete_utilisateur.html.twig
@@ -29,7 +29,7 @@
 				Contact
 			</a>
 
-			{# Déconnexion : formulaire dans la navigation (POST) #}
+			{# Déconnexion#}
 			<form class="navigation_formulaire" action="{{ path('deconnexion') }}" method="post">
 				<button class="nav_lien" type="submit">
 					Déconnexion
