--- a/templates/inscription/index.html.twig
+++ b/templates/inscription/index.html.twig
@@ -52,7 +52,7 @@ Inscription - EcoRide
 
 					<div
 						class="bloc_photo">
-						{# Aperçu photo (caché tant qu'on n'a rien choisi) #}
+						{# Aperçu photo #}
 						<img
 						id="apercu_photo" class="inscription_apercu_photo" alt="" hidden>
 
