--- a/templates/roles/index.html.twig
+++ b/templates/roles/index.html.twig
@@ -18,7 +18,7 @@
 
   4) Règle importante
      - au moins un rôle doit rester actif
-     - validation faite côté serveur (sécurité métier)
+     - validation faite côté serveur 
 #}
 
 {% extends 'base.html.twig' %}
