--- a/templates/tableau_de_bord/index.html.twig
+++ b/templates/tableau_de_bord/index.html.twig
@@ -1,6 +1,6 @@
 {# templates/tableau_de_bord/index.html.twig #}
 {# Plan :
-  1) En-tête : base.html.twig (on affichera l’en-tête utilisateur)
+  1) En-tête : base.html.twig 
   2) Panneau central (surface beige)
   3) Infos rapides (2 cartes)
   4) Actions principales (cartes)
